--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,6 @@
-﻿
-h2. OECD-Insurance-Statistics
+﻿<h1 align="center">
+OECD-Insurance-Statistics
+</h1>
 
 The major official insurance statistics for all OECD countries. Freelance project by Alexey Malashenko.
 
